--- a/parts/res/xml/dirac_settings.xml
+++ b/parts/res/xml/dirac_settings.xml
@@ -14,9 +14,9 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ListPreference
+    <androidx.preference.ListPreference
         android:key="dirac_headset_pref"
         android:entries="@array/dirac_headset_pref_entries"
         android:entryValues="@array/dirac_headset_pref_values"
@@ -24,7 +24,7 @@
         android:title="@string/dirac_headset_title"
         android:summary="%s" />
 
-    <ListPreference
+    <androidx.preference.ListPreference
         android:key="dirac_preset_pref"
         android:entries="@array/dirac_preset_pref_entries"
         android:entryValues="@array/dirac_preset_pref_values"
@@ -32,4 +32,4 @@
         android:title="@string/dirac_preset_title"
         android:summary="%s" />
 
-</PreferenceScreen>
+</androidx.preference.PreferenceScreen>
